--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev_start": "nodemon index.js"
   },
   "keywords": [],
-  "author": "Anuplab Chatterjee",
+  "author": "Suraj Gupta",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.20"
